Preprocessing testing method

--- a/experiments/clustering/clustering.ipynb
+++ b/experiments/clustering/clustering.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,6 +49,7 @@
     "from sklearn.cluster import KMeans, DBSCAN, AgglomerativeClustering\n",
     "from sklearn.metrics import silhouette_score\n",
     "from scipy.stats import gaussian_kde\n",
+    "from itertools import compress\n",
     "\n",
     "# Local libraries\n",
     "from utils.annotations import BoundingBox"
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,12 +621,92 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Function to generate random yolo data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_random_yolo(x):\n",
+    "    x_rand = random.uniform(0, 1)\n",
+    "    y_rand = random.uniform(0, 1)\n",
+    "    return f'0 {x_rand} {y_rand} 0.0048989405776515005 0.009852199180453436'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Function to test preprocessing effectiveness"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_preprocess(yolo_data_sheet, percent_erroneous) -> Dict:\n",
+    "    total_yolo = {}\n",
+    "    # iterate through sheets in yolo json file\n",
+    "    for sheet in range(1, len(yolo_data)+1):\n",
+    "        if sheet < 10:\n",
+    "            # for ease of replacement, select bounding boxes with 0 label\n",
+    "            select_sheet = yolo_data_sheet[f'RC_000{sheet}_intraoperative.JPG']\n",
+    "            boolean_list = [x.startswith('0') for x in yolo_data[f'RC_000{sheet}_intraoperative.JPG']]\n",
+    "            zero_list = list(compress(select_sheet, boolean_list))\n",
+    "            # replace percent of the 64 possible zeros in the sheet\n",
+    "            count_remove = round(percent_erroneous * 64) # 64 zeros\n",
+    "            # subset and remove % of yolo lines from json file\n",
+    "            lines_remove = list(random.sample(zero_list, count_remove))\n",
+    "            _ = [select_sheet.remove(line) for line in lines_remove]\n",
+    "            # use random yolo generation to refill removed lines\n",
+    "            lines_gen = list(map(generate_random_yolo, range(len(lines_remove))))\n",
+    "            # append yolo generated list back to copy \n",
+    "            yolo_shuffle = select_sheet + lines_gen\n",
+    "            total_yolo[f'RC_000{sheet}_intraoperative.JPG'] = yolo_shuffle\n",
+    "            \n",
+    "        else:\n",
+    "            select_sheet = yolo_data_sheet[f'RC_00{sheet}_intraoperative.JPG']\n",
+    "            boolean_list = [x.startswith('0') for x in yolo_data[f'RC_00{sheet}_intraoperative.JPG']]\n",
+    "            zero_list = list(compress(select_sheet, boolean_list))\n",
+    "            # replace percent of the 64 possible zeros in the sheet\n",
+    "            count_remove = round(percent_erroneous * 64) # 64 zeros\n",
+    "            # subset and remove % of yolo lines from json file\n",
+    "            lines_remove = list(random.sample(zero_list, count_remove))\n",
+    "            _ = [select_sheet.remove(line) for line in lines_remove]\n",
+    "            # use random yolo generation to refill removed lines\n",
+    "            lines_gen = list(map(generate_random_yolo, range(len(lines_remove))))\n",
+    "            # append yolo generated list back to copy \n",
+    "            yolo_shuffle = select_sheet + lines_gen\n",
+    "            total_yolo[f'RC_00{sheet}_intraoperative.JPG'] = yolo_shuffle\n",
+    "\n",
+    "    return total_yolo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# preprocessing test by manipulating yolo data\n",
+    "yolo_data = test_preprocess(yolo_data, 0.1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Now lets use these functions to get the relevant bounding boxes for clustering.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -841,32 +922,32 @@
      "output_type": "stream",
      "text": [
       "Method: kmeans\n",
-      "Time labels: 762 correct clusters, 21 incorrect clusters. There were 36 undetected clusters. The accuracy is 90.98%.\n",
-      "Average distance when correct: 4.90px, incorrect: 4.41px, and overall: 4.89px\n",
+      "Time labels: 738 correct clusters, 25 incorrect clusters. There were 60 undetected clusters. The accuracy is 84.96%.\n",
+      "Average distance when correct: 4.88px, incorrect: 4.87px, and overall: 4.88px\n",
       "\n",
       "\n",
-      "Number labels: 371 correct clusters, 2 incorrect clusters. There were 9 undetected clusters. The accuracy is 95.26%.\n",
-      "Average distance when correct: 6.55px, incorrect: 6.78px, and overall: 6.55px\n",
+      "Number labels: 373 correct clusters, 2 incorrect clusters. There were 7 undetected clusters. The accuracy is 96.32%.\n",
+      "Average distance when correct: 6.44px, incorrect: 7.04px, and overall: 6.44px\n",
       "\n",
       "\n",
       "\n",
       "Method: dbscan\n",
-      "Time labels: 768 correct clusters, 63 incorrect clusters. There were 30 undetected clusters. The accuracy is 92.48%.\n",
-      "Average distance when correct: 4.84px, incorrect: 6.84px, and overall: 5.00px\n",
+      "Time labels: 755 correct clusters, 46 incorrect clusters. There were 43 undetected clusters. The accuracy is 89.22%.\n",
+      "Average distance when correct: 4.79px, incorrect: 6.88px, and overall: 4.91px\n",
       "\n",
       "\n",
-      "Number labels: 353 correct clusters, 10 incorrect clusters. There were 27 undetected clusters. The accuracy is 85.79%.\n",
-      "Average distance when correct: 6.56px, incorrect: 6.30px, and overall: 6.56px\n",
+      "Number labels: 337 correct clusters, 17 incorrect clusters. There were 43 undetected clusters. The accuracy is 77.37%.\n",
+      "Average distance when correct: 6.46px, incorrect: 6.78px, and overall: 6.47px\n",
       "\n",
       "\n",
       "\n",
       "Method: agglomerative\n",
-      "Time labels: 760 correct clusters, 24 incorrect clusters. There were 38 undetected clusters. The accuracy is 90.48%.\n",
-      "Average distance when correct: 4.90px, incorrect: 5.12px, and overall: 4.91px\n",
+      "Time labels: 755 correct clusters, 28 incorrect clusters. There were 43 undetected clusters. The accuracy is 89.22%.\n",
+      "Average distance when correct: 4.83px, incorrect: 5.46px, and overall: 4.86px\n",
       "\n",
       "\n",
-      "Number labels: 363 correct clusters, 6 incorrect clusters. There were 17 undetected clusters. The accuracy is 91.05%.\n",
-      "Average distance when correct: 6.58px, incorrect: 4.68px, and overall: 6.55px\n",
+      "Number labels: 358 correct clusters, 14 incorrect clusters. There were 22 undetected clusters. The accuracy is 88.42%.\n",
+      "Average distance when correct: 6.52px, incorrect: 4.83px, and overall: 6.45px\n",
       "\n",
       "\n",
       "\n"
