Test for preprocessing effectiveness

--- a/experiments/clustering/clustering.ipynb
+++ b/experiments/clustering/clustering.ipynb
@@ -327,7 +327,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
    "execution_count": 47,
    "metadata": {},
    "outputs": [],
@@ -691,6 +690,86 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Function to generate random yolo data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_random_yolo(x):\n",
+    "    x_rand = random.uniform(0, 1)\n",
+    "    y_rand = random.uniform(0, 1)\n",
+    "    return f'0 {x_rand} {y_rand} 0.0048989405776515005 0.009852199180453436'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Function to test preprocessing effectiveness"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_preprocess(yolo_data_sheet, percent_erroneous) -> Dict:\n",
+    "    total_yolo = {}\n",
+    "    # iterate through sheets in yolo json file\n",
+    "    for sheet in range(1, len(yolo_data)+1):\n",
+    "        if sheet < 10:\n",
+    "            # for ease of replacement, select bounding boxes with 0 label\n",
+    "            select_sheet = yolo_data_sheet[f'RC_000{sheet}_intraoperative.JPG']\n",
+    "            boolean_list = [x.startswith('0') for x in yolo_data[f'RC_000{sheet}_intraoperative.JPG']]\n",
+    "            zero_list = list(compress(select_sheet, boolean_list))\n",
+    "            # replace percent of the 64 possible zeros in the sheet\n",
+    "            count_remove = round(percent_erroneous * 64) # 64 zeros\n",
+    "            # subset and remove % of yolo lines from json file\n",
+    "            lines_remove = list(random.sample(zero_list, count_remove))\n",
+    "            _ = [select_sheet.remove(line) for line in lines_remove]\n",
+    "            # use random yolo generation to refill removed lines\n",
+    "            lines_gen = list(map(generate_random_yolo, range(len(lines_remove))))\n",
+    "            # append yolo generated list back to copy \n",
+    "            yolo_shuffle = select_sheet + lines_gen\n",
+    "            total_yolo[f'RC_000{sheet}_intraoperative.JPG'] = yolo_shuffle\n",
+    "            \n",
+    "        else:\n",
+    "            select_sheet = yolo_data_sheet[f'RC_00{sheet}_intraoperative.JPG']\n",
+    "            boolean_list = [x.startswith('0') for x in yolo_data[f'RC_00{sheet}_intraoperative.JPG']]\n",
+    "            zero_list = list(compress(select_sheet, boolean_list))\n",
+    "            # replace percent of the 64 possible zeros in the sheet\n",
+    "            count_remove = round(percent_erroneous * 64) # 64 zeros\n",
+    "            # subset and remove % of yolo lines from json file\n",
+    "            lines_remove = list(random.sample(zero_list, count_remove))\n",
+    "            _ = [select_sheet.remove(line) for line in lines_remove]\n",
+    "            # use random yolo generation to refill removed lines\n",
+    "            lines_gen = list(map(generate_random_yolo, range(len(lines_remove))))\n",
+    "            # append yolo generated list back to copy \n",
+    "            yolo_shuffle = select_sheet + lines_gen\n",
+    "            total_yolo[f'RC_00{sheet}_intraoperative.JPG'] = yolo_shuffle\n",
+    "\n",
+    "    return total_yolo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# preprocessing test by manipulating yolo data\n",
+    "# yolo_data = test_preprocess(yolo_data, 0.1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Function that tests the clustering methods with our without erroneous boxes\n",
     "\n",
     "Now lets use these functions to get the relevant bounding boxes for clustering.\n"
@@ -698,7 +777,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
    "execution_count": 53,
    "metadata": {},
    "outputs": [],
@@ -861,7 +939,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
    "execution_count": 54,
    "metadata": {},
    "outputs": [],
