--- a/experiments/clustering/clustering.ipynb
+++ b/experiments/clustering/clustering.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,12 +646,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def erroneous_bounding_boxes(\n",
-    "    time_BB: List[str], number_BB: List[str]\n",
+    "    time_BB: List[str], number_BB: List[str],\n",
+    "    percent_erroneous: float\n",
     ") -> Tuple[List[str], List[str]]:\n",
     "    \"\"\"\n",
     "    Create 5% erroneous bounding boxes by simultaneously removing and generating time and number BB.\n",
@@ -659,6 +660,7 @@
     "    Args:\n",
     "        time_BB: list of time bounding boxes in BoundingBox format\n",
     "        number_BB: list of number bounding boxes in BoundingBox format\n",
+    "        percent_erroneous: number between 0 and 1 for percent of erroneous Bounding Boxes\n",
     "\n",
     "    Returns:\n",
     "        Tuple: lists of time and number bounding boxes in BoundingBox format\n",
@@ -667,10 +669,15 @@
     "    time_BB_copy = time_BB.copy()\n",
     "    number_BB_copy = number_BB.copy()\n",
     "\n",
+    "    # convert percent input\n",
+    "    time_BB_count = round(percent_erroneous * 76) # 76 time bounding boxes\n",
+    "    number_BB_count = round(percent_erroneous * 53) # 53 number bounding boxes\n",
+    "\n",
     "    # subset and remove 5% of bounding boxes from time/number_bounding_boxes lists\n",
     "    ## sample\n",
-    "    time_BB_sample = list(random.sample(time_BB_copy, 4))\n",
-    "    number_BB_sample = list(random.sample(number_BB_copy, 4))\n",
+    "    time_BB_sample = list(random.sample(time_BB_copy, time_BB_count))\n",
+    "    number_BB_sample = list(random.sample(number_BB_copy, number_BB_count))\n",
+    "\n",
     "    ## remove\n",
     "    _ = [time_BB_copy.remove(line) for line in time_BB_sample]\n",
     "    _ = [number_BB_copy.remove(line) for line in number_BB_sample]\n",
@@ -695,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,11 +784,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def test_clustering_methods(add_erroneous = True) -> None:\n",
+    "def test_clustering_methods(percent_erroneous_BB: float, add_erroneous = True) -> None:\n",
     "    \"\"\"\n",
     "    Test the clustering methods on the YOLO data.\n",
     "    Saves the clustered images and the clustered bounding boxes to JSON files.\n",
@@ -807,7 +814,7 @@
     "        if add_erroneous:\n",
     "            # make erroneous bounding boxes -- simultaneously add and remove %5 of boxes\n",
     "            time_bounding_boxes, number_bounding_boxes = erroneous_bounding_boxes(\n",
-    "                time_bounding_boxes, number_bounding_boxes\n",
+    "                time_bounding_boxes, number_bounding_boxes, percent_erroneous_BB\n",
     "            )\n",
     "\n",
     "        for method in [\"kmeans\", \"dbscan\", \"agglomerative\"]:\n",
@@ -939,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1109,32 +1116,32 @@
      "output_type": "stream",
      "text": [
       "Method: kmeans\n",
-      "Time labels: 738 correct clusters, 25 incorrect clusters. There were 60 undetected clusters. The accuracy is 84.96%.\n",
-      "Average distance when correct: 4.88px, incorrect: 4.87px, and overall: 4.88px\n",
+      "Time labels: 797 correct clusters, 0 incorrect clusters. There were 1 undetected clusters. The accuracy is 99.75%.\n",
+      "Average distance when correct: 4.76px, incorrect: 0.00px, and overall: 4.76px\n",
       "\n",
       "\n",
-      "Number labels: 373 correct clusters, 2 incorrect clusters. There were 7 undetected clusters. The accuracy is 96.32%.\n",
-      "Average distance when correct: 6.44px, incorrect: 7.04px, and overall: 6.44px\n",
+      "Number labels: 380 correct clusters, 0 incorrect clusters. There were 0 undetected clusters. The accuracy is 100.00%.\n",
+      "Average distance when correct: 6.11px, incorrect: 0.00px, and overall: 6.11px\n",
       "\n",
       "\n",
       "\n",
       "Method: dbscan\n",
-      "Time labels: 755 correct clusters, 46 incorrect clusters. There were 43 undetected clusters. The accuracy is 89.22%.\n",
-      "Average distance when correct: 4.79px, incorrect: 6.88px, and overall: 4.91px\n",
+      "Time labels: 797 correct clusters, 0 incorrect clusters. There were 1 undetected clusters. The accuracy is 99.75%.\n",
+      "Average distance when correct: 4.76px, incorrect: 0.00px, and overall: 4.76px\n",
       "\n",
       "\n",
-      "Number labels: 337 correct clusters, 17 incorrect clusters. There were 43 undetected clusters. The accuracy is 77.37%.\n",
-      "Average distance when correct: 6.46px, incorrect: 6.78px, and overall: 6.47px\n",
+      "Number labels: 380 correct clusters, 0 incorrect clusters. There were 0 undetected clusters. The accuracy is 100.00%.\n",
+      "Average distance when correct: 6.11px, incorrect: 0.00px, and overall: 6.11px\n",
       "\n",
       "\n",
       "\n",
       "Method: agglomerative\n",
-      "Time labels: 755 correct clusters, 28 incorrect clusters. There were 43 undetected clusters. The accuracy is 89.22%.\n",
-      "Average distance when correct: 4.83px, incorrect: 5.46px, and overall: 4.86px\n",
+      "Time labels: 797 correct clusters, 0 incorrect clusters. There were 1 undetected clusters. The accuracy is 99.75%.\n",
+      "Average distance when correct: 4.76px, incorrect: 0.00px, and overall: 4.76px\n",
       "\n",
       "\n",
-      "Number labels: 358 correct clusters, 14 incorrect clusters. There were 22 undetected clusters. The accuracy is 88.42%.\n",
-      "Average distance when correct: 6.52px, incorrect: 4.83px, and overall: 6.45px\n",
+      "Number labels: 380 correct clusters, 0 incorrect clusters. There were 0 undetected clusters. The accuracy is 100.00%.\n",
+      "Average distance when correct: 6.11px, incorrect: 0.00px, and overall: 6.11px\n",
       "\n",
       "\n",
       "\n"
@@ -1143,7 +1150,7 @@
    ],
    "source": [
     "# Test the clustering methods with errouneous bounding boxes\n",
-    "test_clustering_methods(add_erroneous=False)\n",
+    "test_clustering_methods(0.05, add_erroneous=False)\n",
     "analyze_accuracy()"
    ]
   },
@@ -1212,7 +1219,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1226,7 +1233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
