--- a/experiments/clustering/clustering.ipynb
+++ b/experiments/clustering/clustering.ipynb
@@ -501,6 +501,55 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_cluster_bbs(labels: List[str], bounding_boxes: List[BoundingBox]) -> Dict[str, BoundingBox]:\n",
+    "    \"\"\"\n",
+    "    Create a dictionary with cluster labels as keys and a BoundingBox for the cluster.\n",
+    "\n",
+    "    Args:\n",
+    "        labels: List of cluster labels.\n",
+    "        bounding_boxes: List of bounding boxes.\n",
+    "\n",
+    "    Returns:\n",
+    "        Dictionary with cluster labels as keys and a bounding box value as values.\n",
+    "    \"\"\"\n",
+    "    # Create a dictionary to store labelled elements\n",
+    "    label_dict = {}\n",
+    "\n",
+    "    # Iterate over both lists for labels and the bounding boxes found\n",
+    "    for label, box in zip(labels, bounding_boxes):\n",
+    "        label = int(label)\n",
+    "        if label not in label_dict:\n",
+    "            # Create a new list for this label if it doesn't exist\n",
+    "            label_dict[label] = []\n",
+    "        # Append the element to the corresponding label list\n",
+    "        label_dict[label].append(box)\n",
+    "\n",
+    "    # Create dictionary that will hold the cluster label and bounding box\n",
+    "    cluster_dict = {}\n",
+    "    # Iterate over the label_dict to find the overall coordinates for the cluster\n",
+    "    for key in label_dict:\n",
+    "        # calculate the coordinates of the cluster bounding box\n",
+    "        x_left = min([bb.left for bb in label_dict[key]])\n",
+    "        x_right = max([bb.right for bb in label_dict[key]])\n",
+    "        y_top = min([bb.top for bb in label_dict[key]])\n",
+    "        y_bottom = max([bb.bottom for bb in label_dict[key]])\n",
+    "        # store the bounding box into the dictionary\n",
+    "        cluster_dict[key] = BoundingBox(\n",
+    "            category = key,\n",
+    "            left = x_left,\n",
+    "            right = x_right,\n",
+    "            top = y_top,\n",
+    "            bottom = y_bottom\n",
+    "        )\n",
+    "    return cluster_dict\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -509,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -843,10 +892,11 @@
     "            image: Image = Image.open(full_image_path)\n",
     "            image_width, image_height = image.size\n",
     "\n",
+    "            # get time clusters\n",
+    "            time_cluster_bbs = get_cluster_bbs(time_labels, time_bounding_boxes)\n",
+    "\n",
     "            label_color_map = {}\n",
-    "            for i, label in enumerate(time_labels):\n",
-    "                # Get the bounding box\n",
-    "                bounding_box = time_bounding_boxes[i]\n",
+    "            for label, bounding_box in time_cluster_bbs.items():\n",
     "                x_min, y_min, x_max, y_max = [\n",
     "                    (coor / 800) * image_width\n",
     "                    if i % 2 == 0\n",
@@ -888,10 +938,12 @@
     "            # Create an image object\n",
     "            image: Image = Image.open(full_image_path)\n",
     "            image_width, image_height = image.size\n",
+    "\n",
+    "            # get number clusters\n",
+    "            number_cluster_bbs = get_cluster_bbs(number_labels, number_bounding_boxes)\n",
+    "\n",
     "            label_color_map = {}\n",
-    "            for i, label in enumerate(number_labels):\n",
-    "                # Get the bounding box\n",
-    "                bounding_box = number_bounding_boxes[i]\n",
+    "            for label, bounding_box in number_cluster_bbs.items():\n",
     "                x_min, y_min, x_max, y_max = [\n",
     "                    (coor / 800) * image_width\n",
     "                    if i % 2 == 0\n",
@@ -946,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1108,50 +1160,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Method: kmeans\n",
-      "Time labels: 797 correct clusters, 0 incorrect clusters. There were 1 undetected clusters. The accuracy is 99.75%.\n",
-      "Average distance when correct: 4.76px, incorrect: 0.00px, and overall: 4.76px\n",
-      "\n",
-      "\n",
-      "Number labels: 380 correct clusters, 0 incorrect clusters. There were 0 undetected clusters. The accuracy is 100.00%.\n",
-      "Average distance when correct: 6.11px, incorrect: 0.00px, and overall: 6.11px\n",
-      "\n",
-      "\n",
-      "\n",
-      "Method: dbscan\n",
-      "Time labels: 797 correct clusters, 0 incorrect clusters. There were 1 undetected clusters. The accuracy is 99.75%.\n",
-      "Average distance when correct: 4.76px, incorrect: 0.00px, and overall: 4.76px\n",
-      "\n",
-      "\n",
-      "Number labels: 380 correct clusters, 0 incorrect clusters. There were 0 undetected clusters. The accuracy is 100.00%.\n",
-      "Average distance when correct: 6.11px, incorrect: 0.00px, and overall: 6.11px\n",
-      "\n",
-      "\n",
-      "\n",
-      "Method: agglomerative\n",
-      "Time labels: 797 correct clusters, 0 incorrect clusters. There were 1 undetected clusters. The accuracy is 99.75%.\n",
-      "Average distance when correct: 4.76px, incorrect: 0.00px, and overall: 4.76px\n",
-      "\n",
-      "\n",
-      "Number labels: 380 correct clusters, 0 incorrect clusters. There were 0 undetected clusters. The accuracy is 100.00%.\n",
-      "Average distance when correct: 6.11px, incorrect: 0.00px, and overall: 6.11px\n",
-      "\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test the clustering methods with errouneous bounding boxes\n",
     "test_clustering_methods(0.05, add_erroneous=False)\n",
-    "analyze_accuracy()"
+    "# analyze_accuracy()"
    ]
   },
   {
@@ -1219,7 +1234,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ChartExtractor",
    "language": "python",
    "name": "python3"
   },
@@ -1233,7 +1248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
