--- a/experiments/clustering/clustering.ipynb
+++ b/experiments/clustering/clustering.ipynb
@@ -1275,9 +1275,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Method: kmeans\n",
+      "Time mAP: 0.8419071518193224\n",
+      "Number mAP: 0.9131578947368421\n",
+      "Method: dbscan\n",
+      "Time mAP: 0.8419071518193224\n",
+      "Number mAP: 0.9131578947368421\n",
+      "Method: agglomerative\n",
+      "Time mAP: 0.8419071518193224\n",
+      "Number mAP: 0.9131578947368421\n"
+     ]
+    }
+   ],
    "source": [
     "# Test the clustering methods with errouneous bounding boxes\n",
     "test_clustering_methods(add_erroneous=False)\n",
@@ -1293,9 +1309,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Method: kmeans\n",
+      "Time mAP: 0.6080729166666666\n",
+      "Number mAP: 0.8793565683646114\n",
+      "Method: dbscan\n",
+      "Time mAP: 0.6146220570012392\n",
+      "Number mAP: 0.8767123287671232\n",
+      "Method: agglomerative\n",
+      "Time mAP: 0.5878552971576227\n",
+      "Number mAP: 0.875\n"
+     ]
+    }
+   ],
    "source": [
     "# Test the clustering methods with errouneous bounding boxes\n",
     "test_clustering_methods(True, 0.05)\n",
