Fixed filtering typo

--- a/experiments/clustering/clustering.ipynb
+++ b/experiments/clustering/clustering.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
     "    # remove outliers via the y axis\n",
     "    filtered = [bb for bb in x_filtered if y_lower <= bb.top <= y_upper]\n",
     "\n",
-    "    return x_filtered\n",
+    "    return filtered\n",
     "\n",
     "\n",
     "def select_relevant_bounding_boxes(\n",
