Updated preprocessing test to only add new bounding boxes and constrain to outside ROI

--- a/experiments/clustering/clustering.ipynb
+++ b/experiments/clustering/clustering.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,8 +814,10 @@
    "outputs": [],
    "source": [
     "def generate_random_yolo(x):\n",
+    "    # x values across whole picture\n",
     "    x_rand = random.uniform(0, 1)\n",
-    "    y_rand = random.uniform(0, 1)\n",
+    "    # y values from top of picture to time axis\n",
+    "    y_rand = random.uniform(0, 0.36)\n",
     "    return f\"0 {x_rand} {y_rand} 0.0048989405776515005 0.009852199180453436\""
    ]
   },
@@ -828,46 +830,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def test_preprocess(yolo_data_sheet, percent_erroneous) -> Dict:\n",
+    "def test_preprocess(yolo_data_sheet, number_erroneous: int) -> Dict:\n",
+    "    \"\"\"Generate random bounding boxes to fall outside the region of interest,\n",
+    "    testing the effectiveness of the preprocessing steps\n",
+    "\n",
+    "    Args:\n",
+    "        yolo_data_sheet (dict): yolo data to add erroneous boxes\n",
+    "        number_erroneous (int): amount of erroneous boxes to add \n",
+    "\n",
+    "    Returns:\n",
+    "        Dict: _description_\n",
+    "    \"\"\"\n",
     "    total_yolo = {}\n",
     "    # iterate through sheets in yolo json file\n",
     "    for sheet in range(1, len(yolo_data) + 1):\n",
     "        if sheet < 10:\n",
     "            # for ease of replacement, select bounding boxes with 0 label\n",
     "            select_sheet = yolo_data_sheet[f\"RC_000{sheet}_intraoperative.JPG\"]\n",
-    "            boolean_list = [\n",
-    "                x.startswith(\"0\")\n",
-    "                for x in yolo_data[f\"RC_000{sheet}_intraoperative.JPG\"]\n",
-    "            ]\n",
-    "            zero_list = list(compress(select_sheet, boolean_list))\n",
-    "            # replace percent of the 64 possible zeros in the sheet\n",
-    "            count_remove = round(percent_erroneous * 64)  # 64 zeros\n",
-    "            # subset and remove % of yolo lines from json file\n",
-    "            lines_remove = list(random.sample(zero_list, count_remove))\n",
-    "            _ = [select_sheet.remove(line) for line in lines_remove]\n",
-    "            # use random yolo generation to refill removed lines\n",
-    "            lines_gen = list(map(generate_random_yolo, range(len(lines_remove))))\n",
+    "            # add specified number of erroneous boxes outside the region of interest\n",
+    "            lines_gen = list(map(generate_random_yolo, range(number_erroneous)))\n",
     "            # append yolo generated list back to copy\n",
     "            yolo_shuffle = select_sheet + lines_gen\n",
     "            total_yolo[f\"RC_000{sheet}_intraoperative.JPG\"] = yolo_shuffle\n",
     "\n",
     "        else:\n",
     "            select_sheet = yolo_data_sheet[f\"RC_00{sheet}_intraoperative.JPG\"]\n",
-    "            boolean_list = [\n",
-    "                x.startswith(\"0\") for x in yolo_data[f\"RC_00{sheet}_intraoperative.JPG\"]\n",
-    "            ]\n",
-    "            zero_list = list(compress(select_sheet, boolean_list))\n",
-    "            # replace percent of the 64 possible zeros in the sheet\n",
-    "            count_remove = round(percent_erroneous * 64)  # 64 zeros\n",
-    "            # subset and remove % of yolo lines from json file\n",
-    "            lines_remove = list(random.sample(zero_list, count_remove))\n",
-    "            _ = [select_sheet.remove(line) for line in lines_remove]\n",
-    "            # use random yolo generation to refill removed lines\n",
-    "            lines_gen = list(map(generate_random_yolo, range(len(lines_remove))))\n",
+    "            # add specified number of erroneous boxes outside the region of interest\n",
+    "            lines_gen = list(map(generate_random_yolo, range(number_erroneous)))\n",
     "            # append yolo generated list back to copy\n",
     "            yolo_shuffle = select_sheet + lines_gen\n",
     "            total_yolo[f\"RC_00{sheet}_intraoperative.JPG\"] = yolo_shuffle\n",
@@ -877,12 +870,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# preprocessing test by manipulating yolo data\n",
-    "#yolo_data = test_preprocess(yolo_data, 0.1)"
+    "# yolo_data = test_preprocess(yolo_data, 10)"
    ]
   },
   {
@@ -896,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1275,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1337,7 +1330,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1351,7 +1344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
