Added mAP challeges

--- a/experiments/clustering/clustering.ipynb
+++ b/experiments/clustering/clustering.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1056,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1087,6 +1087,32 @@
     "  ap = calculate_ap(precision, recall)\n",
     "\n",
     "  return ap\n",
+    "\n",
+    "def calculate_map_challenge(ious):\n",
+    "  \"\"\"Calculates Mean Average Precision (mAP) from a list of IoUs.\n",
+    "  Challenge version: AP is calculated only for IoUs >= 0.5 and average is returned.\n",
+    "\n",
+    "  Args:\n",
+    "    ious: A list of IoUs for each prediction-ground truth pair.\n",
+    "\n",
+    "  Returns:\n",
+    "    The calculated mAP.\n",
+    "  \"\"\"\n",
+    "\n",
+    "  # Sort IoUs in descending order\n",
+    "  ious.sort(reverse=True)\n",
+    "  aps = []\n",
+    "  for limit in [i / 100 for i in range(50, 100, 5)]:\n",
+    "    # Calculate precision and recall\n",
+    "    tp = np.cumsum([1 if iou >= limit else 0 for iou in ious])\n",
+    "    fp = np.cumsum([1 if iou < limit else 0 for iou in ious])\n",
+    "    precision = tp / (tp + fp)\n",
+    "    recall = tp / len(ious)\n",
+    "\n",
+    "    # Calculate Average Precision (AP)\n",
+    "    aps.append(calculate_ap(precision, recall))\n",
+    "\n",
+    "  return np.mean(aps)\n",
     "\n",
     "def calculate_ap(precision, recall):\n",
     "  \"\"\"Calculates Average Precision (AP) from precision and recall curves.\n",
@@ -1254,9 +1280,13 @@
     "\n",
     "        # Calculate the Mean Average Precision (mAP) for the time and number clusters\n",
     "        time_map = calculate_map(time_ious)\n",
+    "        time_challenge_map = calculate_map_challenge(time_ious)\n",
     "        number_map = calculate_map(number_ious)\n",
+    "        number_challenge_map = calculate_map_challenge(number_ious)\n",
     "        print(f\"Time mAP: {time_map}\")\n",
-    "        print(f\"Number mAP: {number_map}\")"
+    "        print(f\"Number mAP: {number_map}\")\n",
+    "        print(f\"Time Challenge mAP: {time_challenge_map}\")\n",
+    "        print(f\"Number Challenge mAP: {number_challenge_map}\")"
    ]
   },
   {
@@ -1268,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1278,12 +1308,18 @@
       "Method: kmeans\n",
       "Time mAP: 0.8419071518193224\n",
       "Number mAP: 0.9131578947368421\n",
+      "Time Challenge mAP: 0.5555834378920954\n",
+      "Number Challenge mAP: 0.58\n",
       "Method: dbscan\n",
       "Time mAP: 0.8419071518193224\n",
       "Number mAP: 0.9131578947368421\n",
+      "Time Challenge mAP: 0.5555834378920954\n",
+      "Number Challenge mAP: 0.58\n",
       "Method: agglomerative\n",
       "Time mAP: 0.8419071518193224\n",
-      "Number mAP: 0.9131578947368421\n"
+      "Number mAP: 0.9131578947368421\n",
+      "Time Challenge mAP: 0.5555834378920954\n",
+      "Number Challenge mAP: 0.58\n"
      ]
     }
    ],
@@ -1302,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1310,14 +1346,20 @@
      "output_type": "stream",
      "text": [
       "Method: kmeans\n",
-      "Time mAP: 0.6080729166666666\n",
-      "Number mAP: 0.8793565683646114\n",
+      "Time mAP: 0.5764248704663213\n",
+      "Number mAP: 0.8831521739130435\n",
+      "Time Challenge mAP: 0.3765544041450778\n",
+      "Number Challenge mAP: 0.5638586956521738\n",
       "Method: dbscan\n",
-      "Time mAP: 0.6146220570012392\n",
-      "Number mAP: 0.8767123287671232\n",
+      "Time mAP: 0.5963190184049079\n",
+      "Number mAP: 0.8823529411764706\n",
+      "Time Challenge mAP: 0.3890797546012269\n",
+      "Number Challenge mAP: 0.5649859943977591\n",
       "Method: agglomerative\n",
-      "Time mAP: 0.5878552971576227\n",
-      "Number mAP: 0.875\n"
+      "Time mAP: 0.5862068965517241\n",
+      "Number mAP: 0.8989071038251366\n",
+      "Time Challenge mAP: 0.3828863346104725\n",
+      "Number Challenge mAP: 0.5658469945355191\n"
      ]
     }
    ],
@@ -1330,7 +1372,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1344,7 +1386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
