--- a/experiments/thin_plate_splines/TPS.ipynb
+++ b/experiments/thin_plate_splines/TPS.ipynb
@@ -5,9 +5,31 @@
    "metadata": {},
    "source": [
     "# Thin Plate Splines Transformations\n",
-    "**Author: Matthew Beck** \\\n",
-    "\\\n",
+    "\n",
     "**Purpose:** The purpose of this experiment to implement thin plate spline transformations on images. The goal is to help normalize images of charts that have been folded or bent. TPS registration will be performed post-homography"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What are Thin Plate Splines\n",
+    "\n",
+    "For our purpose, a thin plate spline transformation can be defined as follows:  \n",
+    "Given a set of \"source\" points $P_s$ and a corresponding set of \"destination\" points $P_d$, the thin plate spline transformation is a function  \n",
+    "$f_{tps}(p) | \\forall p_s \\in P_s, f_{tps}$ and $f$ is the function when \"bends\" all other points the least among all differentiable functions (meaning it minimizes an energy function).  \n",
+    "\n",
+    "![thin_plate_spline_example](https://github.com/user-attachments/assets/9f269c79-6d5d-4090-988c-39ee9e928ff0)\n",
+    "\n",
+    "In this image there are two sets of points which form fish shapes. The red '+' points represent the destination points, and the green 'o' points represent the source points. On the right we see the thin plate spline deformation which makes all the green points exactly match all the red points, and we can also see a grid that shows where all other points on the plane will be mapped as well.  \n",
+    "\n",
+    "## Benefits for Image Registration\n",
+    "While the homography is a very reliable transformation, it is limited to purely linear transformations (ex: rotation, scaling, shear).  \n",
+    "Very commonly, pages will be creased or folded, the edge of pages will curl inwards or outwards, or some cameras will cause barrel/pinhole distortions.  \n",
+    "This leads to a whole subset of issues that cannot be corrected linearly, but still must be accounted for.\n",
+    "\n",
+    "![smaller_RC_0033_preoperative_postoperative](https://github.com/user-attachments/assets/f22374e1-75b4-4a07-816f-d3ad51e84921)\n",
+    "An example of a paper which has been folded. and unfolded, causing non-linear distortions. This is a *very* modest example. In practice, we have seen photographs of papers that are raised at least an inch off the table in certain areas."
    ]
   },
   {
@@ -28,6 +50,19 @@
     "from PIL import Image\n",
     "from scipy.interpolate import Rbf\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load the data for testing:\n",
+    "- \"intraop_document_landmarks.json\"\n",
+    "    - Used for the destination points in the transformation. We are using the landmarks from the unified image\n",
+    "    - Also has landmarks for each of the images. We currently are not using them\n",
+    "- \"yolo_data.json\"\n",
+    "    - Used for the source points in the transformation.\n",
+    "    - May need to be replace with the landmarks from the other file"
    ]
   },
   {
@@ -78,6 +113,34 @@
     "landmark_location_data: Dict[str, List[BoundingBox]] = label_studio_to_bboxes(PATH_TO_LANDMARKS)\n",
     "\n",
     "landmarks = landmark_location_data['unified_intraoperative_preoperative_flowsheet_v1_1_front.png']\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**TPS Tranformation**\n",
+    "Steps:\n",
+    "1. Filter to keep only the relevant bounding boxes\n",
+    "    - remove all bounding boxes from the source points that do not match a category in the destination points\n",
+    "    - Find all of the duplicates in the source and destination points and remove them\n",
+    "    - sort the source and destination points alphabetically via their category\n",
+    "2. Get lists of the x and y coordinates for both the source and destination points\n",
+    "    - Primary purpose is to enable the use of scipy's Rbf function\n",
+    "    - We are using the top left corner of the bounding boxes\n",
+    "3. Estimate the transformation\n",
+    "    - Use the Rbf function to apply the TPS transformation\n",
+    "4. Apply the transformation and Warp the image\n",
+    "     - Create a grid from 0 to maximum value of the image\n",
+    "     - Apply the transformation to the grids\n",
+    "     - Ensure that the transformed points are within bounds\n",
+    "     - Use those grids to warp the original image\n",
+    "\n",
+    "*Note:* There are a lot of different outputs that are currently commented out that can be used for debugging purposes:\n",
+    "- Print the lists of duplicate keys and the categories being used in the source and destination points\n",
+    "- Plot of the source and destination points on the image\n",
+    "- View the bounds of the transformed points\n",
+    "- View the distribution of the transformed points"
    ]
   },
   {
